pref: 更新文档